--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-primary navbar-toggleable-md">
+<nav class="navbar navbar-light bg-light navbar-expand-md">
   <button (click)="toggleCollapseNavbar()" class="navbar-toggler navbar-toggler-right" type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
