--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -25,26 +25,26 @@
     <div *ngIf="questionType == 2">
       <div class="form-group row">
         <div class="btn-group hidden-xs-down col-md-9">
-          <button class="btn btn-secondary" [class.active]="vote==0" (click)="createOrUpdateVote(0)">0</button>
-          <button class="btn btn-secondary" [class.active]="vote==1" (click)="createOrUpdateVote(1)">1</button>
-          <button class="btn btn-secondary" [class.active]="vote==3" (click)="createOrUpdateVote(3)">3</button>
-          <button class="btn btn-secondary" [class.active]="vote==5" (click)="createOrUpdateVote(5)">5</button>
-          <button class="btn btn-secondary" [class.active]="vote==8" (click)="createOrUpdateVote(8)">8</button>
-          <button class="btn btn-secondary" [class.active]="vote==13" (click)="createOrUpdateVote(13)">13</button>
-          <button class="btn btn-secondary" [class.active]="vote==20" (click)="createOrUpdateVote(20)">20</button>
-          <button class="btn btn-secondary" [class.active]="vote==40" (click)="createOrUpdateVote(40)">40</button>
-          <button class="btn btn-secondary" [class.active]="vote==100" (click)="createOrUpdateVote(100)">100</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==0" (click)="createOrUpdateVote(0)">0</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==1" (click)="createOrUpdateVote(1)">1</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==3" (click)="createOrUpdateVote(3)">3</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==5" (click)="createOrUpdateVote(5)">5</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==8" (click)="createOrUpdateVote(8)">8</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==13" (click)="createOrUpdateVote(13)">13</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==20" (click)="createOrUpdateVote(20)">20</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==40" (click)="createOrUpdateVote(40)">40</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==100" (click)="createOrUpdateVote(100)">100</button>
         </div>
         <div class="btn-group-vertical hidden-sm-up col-md-9">
-          <button class="btn btn-secondary" [class.active]="vote==0" (click)="createOrUpdateVote(0)">0</button>
-          <button class="btn btn-secondary" [class.active]="vote==1" (click)="createOrUpdateVote(1)">1</button>
-          <button class="btn btn-secondary" [class.active]="vote==3" (click)="createOrUpdateVote(3)">3</button>
-          <button class="btn btn-secondary" [class.active]="vote==5" (click)="createOrUpdateVote(5)">5</button>
-          <button class="btn btn-secondary" [class.active]="vote==8" (click)="createOrUpdateVote(8)">8</button>
-          <button class="btn btn-secondary" [class.active]="vote==13" (click)="createOrUpdateVote(13)">13</button>
-          <button class="btn btn-secondary" [class.active]="vote==20" (click)="createOrUpdateVote(20)">20</button>
-          <button class="btn btn-secondary" [class.active]="vote==40" (click)="createOrUpdateVote(40)">40</button>
-          <button class="btn btn-secondary" [class.active]="vote==100" (click)="createOrUpdateVote(100)">100</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==0" (click)="createOrUpdateVote(0)">0</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==1" (click)="createOrUpdateVote(1)">1</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==3" (click)="createOrUpdateVote(3)">3</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==5" (click)="createOrUpdateVote(5)">5</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==8" (click)="createOrUpdateVote(8)">8</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==13" (click)="createOrUpdateVote(13)">13</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==20" (click)="createOrUpdateVote(20)">20</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==40" (click)="createOrUpdateVote(40)">40</button>
+          <button class="btn btn-outline-primary" [class.active]="vote==100" (click)="createOrUpdateVote(100)">100</button>
         </div>
       </div>
     </div>
