--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-block">
+  <div class="card-body">
     <h5 class="card-title">Chat</h5>
     <div *ngIf="poll.comments?.length">
       <hr>
@@ -14,19 +14,19 @@
       </table>
     </div>
   </div>
-  <div class="card-block">
+  <div class="card-body">
     <form>
       <div class="row">
         <div class="col-lg-12 input-group">
           <input type="text" class="form-control" [(ngModel)]="comment" placeholder="Enter a comment here..." name="comment">
           <span class="input-group-btn">
-            <button class="btn btn-secondary" type="submit" (click)="createComment()"><i class="fa fa-fw fa-arrow-circle-right"></i></button>
+            <button class="btn btn-outline-secondary" type="submit" (click)="createComment()"><i class="fa fa-fw fa-arrow-circle-right"></i></button>
           </span>
         </div>
       </div>
     </form>
   </div>
-  <div class="card-block">
+  <div class="card-body">
     <h5 class="card-title">Users</h5>
     <hr>
     <div *ngFor="let user of poll.users">
