Add loading indicator. Fixes #40.

--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class="col-lg-12 text-center">
+    <i *ngIf="isLoading" class="fa fa-circle-o-notch fa-spin fa-5x"></i>
+  </div>
+</div>
 <div *ngIf="poll" class="row">
   <div class="col-lg-8">
     <div class="card mb-3">
