--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
       <li><p class="mb-0">Questions can have expiration times, and thresholds (Making sure options with too few votes don’t win).</p></li>
       <li><p class="mb-0">Easily shareable poll links.</p></li>
     </ul>
-    <button role="button" class="btn btn-outline-primary btn-block" (click)="createPoll()"><i class="fa fa-fw fa-pencil-square-o"></i>Create a poll</button>
+    <button role="button" class="btn btn-outline-primary btn-block" (click)="createPoll()">Create a poll</button>
   </div>
   <!-- A mocked poll -->
   <div class="col-md-5">
