--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -18,7 +18,7 @@
     <form>
       <div class="row">
         <div class="col-lg-12 input-group">
-          <input type="text" class="form-control" [(ngModel)]="comment" placeholder="Enter a comment here..." name="comment">
+          <input type="text" [disabled]="poll.readOnly" class="form-control" [(ngModel)]="comment" placeholder="Enter a comment here..." name="comment">
           <span class="input-group-btn">
             <button class="btn btn-outline-secondary" type="submit" (click)="createComment()"><i class="fa fa-fw fa-arrow-circle-right"></i></button>
           </span>
