--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -3,9 +3,10 @@
     <span *ngIf="candidate.title" [innerHtml]="candidate.title | markdown"></span>
     <span *ngIf="!candidate.title">Untitled candidate</span>
     <small class="text-muted">
-      <span *ngIf="vote && questionType == 1">Your Vote: {{vote / 10}} | </span>
-      <span *ngIf="vote && questionType == 2">Your Vote: {{vote}} | </span>
-      <span *ngIf="candidate?.meetsThreshold && questionType == 1" role="button">Score: <span tooltip="{{voteAvg(4)}}">{{voteAvg(1)}}</span> | </span>
+      <span *ngIf="voteExists() && questionType == 1">Your Vote: {{vote / 10}} | </span>
+      <span *ngIf="voteExists() && questionType == 2">Your Vote: {{vote}} | </span>
+      <span *ngIf="voteExists() && questionType == 3">Your Vote: {{approvalVoteToThumb()}}</span>
+      <span *ngIf="candidate?.meetsThreshold && (questionType == 1 || questionType == 3)" role="button">Score: <span tooltip="{{voteAvg(4)}}">{{voteAvg(1)}}</span> | </span>
       <span *ngIf="candidate.avg_score && questionType == 2">Score: {{candidate.avg_score.toFixed(1)}} | </span>
       <span *ngIf="!candidate.meetsThreshold">Score: Too Few Votes | </span>
       <span>{{voteCount()}} Votes</span>
@@ -13,7 +14,7 @@
     <small role="button" (click)="toggleEditing()" *ngIf="candidate.editable && !expired"><i class="fa fa-fw fa-pencil-square-o" tooltip="Edit option"></i></small>
     <small role="button" (click)="deleteCandidate()" *ngIf="candidate.editable && !expired" tooltip="Delete option"><i class="fa fa-fw fa-trash"></i></small>
     <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
-    <small *ngIf="vote && !expired" role="button" (click)="deleteVote()" tooltip="Clear vote"><i class="fa fa-fw fa-times"></i></small>
+    <small *ngIf="voteExists() && !expired" role="button" (click)="deleteVote()" tooltip="Clear vote"><i class="fa fa-fw fa-times"></i></small>
   </p>
   <div *ngIf="!this.candidate.editing">
     <div *ngIf="questionType == 1" class="progress">
@@ -21,6 +22,16 @@
       </div>
       <div *ngIf="!candidate.meetsThreshold" class="progress-bar" role="progressbar"></div>
       <input class="vote_input" [class.invisible]="expired || candidate.readOnly" [(ngModel)]="vote" (value)="createOrUpdateVote($event.target.value)" (mouseup)="createOrUpdateVote($event.target.value)" (touchend)="createOrUpdateVote($event.target.value)" type="range" min="0" max="100" step="5" value="100" />
+    </div>
+    <div *ngIf="questionType == 3">
+      <div class="form-group row">
+        <div class="btn-group col-md-12">
+          <button class="btn btn-outline-primary" [class.active]="vote==100" (click)="createOrUpdateVote(100)" [disabled]="expired || candidate.readOnly"><i class="fa fa-fw fa-thumbs-up"></i>
+          </button>
+          <button class="btn btn-outline-primary" [class.active]="vote==0" (click)="createOrUpdateVote(0)" [disabled]="expired || candidate.readOnly"><i class="fa fa-fw fa-thumbs-down"></i>
+          </button>
+        </div>
+      </div>
     </div>
     <div *ngIf="questionType == 2">
       <div class="form-group row">
