--- a/ui/src/app/components/question/question.component.html
+++ b/ui/src/app/components/question/question.component.html
@@ -1,13 +1,18 @@
 <div class="card mb-3">
   <div class="card-body">
-    <h4 class="card-title" *ngIf="!this.question.editing">
-      <span *ngIf="question.title" [innerHtml]="question.title | markdown"></span>
-      <span *ngIf="!question.title">Untitled question</span>
-      <small role="button" (click)="toggleEditing()" *ngIf="question.editable" tooltip="Edit question"><i class="fa fa-fw fa-pencil-square-o"></i></small>
-      <small role="button" (click)="deleteQuestion()" *ngIf="question.editable" tooltip="Delete question"><i class="fa fa-fw fa-trash"></i></small>
-      <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
-      <small *ngIf="isExpired()"><i>expired</i></small>
+    <h4 class="card-title mb-1" *ngIf="!this.question.editing">
+      <span *ngIf="question.title" [innerHtml]="question.title | markdown" class="mr-2"></span>
+      <span *ngIf="!question.title" class="mr-2">Untitled question</span>
+      <ul class="list-inline pointer edits">
+        <li class="list-inline-item" role="button" (click)="toggleEditing()" *ngIf="question.editable" tooltip="Edit question">edit</li>
+        <li class="list-inline-item" role="button" (click)="deleteQuestion()" *ngIf="question.editable" tooltip="Delete question">delete</li>
+        <li class="list-inline-item" role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</li>
+        <li class="list-inline-item" *ngIf="isExpired()">
+          <i>expired</i>
+        </li>
+      </ul>
     </h4>
+
     <div *ngIf="showDetails" class="mb-3">
       <h4>Details</h4>
       <div>Creator: {{question.user.name}}</div>
@@ -20,14 +25,12 @@
       </div>
       <div>
         <label class="form-check-label">
-          <input disabled type="checkbox" class="form-check-input"
-            name="users_can_add_candidates" [(ngModel)]="question.users_can_add_candidates"> Users can add candidates
+          <input disabled type="checkbox" class="form-check-input" name="users_can_add_candidates" [(ngModel)]="question.users_can_add_candidates"> Users can add candidates
         </label>
       </div>
       <div>
         <label class="form-check-label">
-          <input disabled type="checkbox" class="form-check-input"
-            name="anonymous" [(ngModel)]="question.anonymous"> Anonymous
+          <input disabled type="checkbox" class="form-check-input" name="anonymous" [(ngModel)]="question.anonymous"> Anonymous
         </label>
       </div>
       <div class="form-group row">
@@ -44,31 +47,25 @@
       <div class="form-group row">
         <label class="col-md-2 col-form-label">Title</label>
         <div class="col-md-10">
-          <input type="text" class="form-control" autofocus [(ngModel)]="question.title"
-            name="question_title" placeholder="Enter your question name...">
+          <input type="text" class="form-control" autofocus [(ngModel)]="question.title" name="question_title" placeholder="Enter your question name...">
         </div>
       </div>
       <div class="form-check">
         <label class="form-check-label">
-          <input type="checkbox" class="form-check-input" name="users_can_add_candidates"
-            [(ngModel)]="question.users_can_add_candidates"> Users can add candidates
+          <input type="checkbox" class="form-check-input" name="users_can_add_candidates" [(ngModel)]="question.users_can_add_candidates"> Users can add candidates
         </label>
       </div>
       <div class="form-check">
         <label class="form-check-label">
-          <input type="checkbox" class="form-check-input" name="anonymous"
-            [(ngModel)]="question.anonymous"> Anonymous
+          <input type="checkbox" class="form-check-input" name="anonymous" [(ngModel)]="question.anonymous"> Anonymous
         </label>
       </div>
       <div class="form-group row">
         <label class="col-md-4 col-form-label">Type</label>
         <div class="btn-group col-md-8">
-          <label class="btn btn-outline-primary" name="range_btn" [class.active]="question.question_type_id==1"
-            (click)="question.question_type_id = 1">Range</label>
-          <label class="btn btn-outline-primary" name="approval_btn" [class.active]="question.question_type_id==3"
-            (click)="question.question_type_id = 3">Approval</label>
-          <label class="btn btn-outline-primary" name="pp_btn" [class.active]="question.question_type_id==2"
-            (click)="question.question_type_id = 2">Pointing Poker</label>
+          <label class="btn btn-outline-primary" name="range_btn" [class.active]="question.question_type_id==1" (click)="question.question_type_id = 1">Range</label>
+          <label class="btn btn-outline-primary" name="approval_btn" [class.active]="question.question_type_id==3" (click)="question.question_type_id = 3">Approval</label>
+          <label class="btn btn-outline-primary" name="pp_btn" [class.active]="question.question_type_id==2" (click)="question.question_type_id = 2">Pointing Poker</label>
         </div>
       </div>
       <div class="form-group row">
@@ -76,12 +73,9 @@
           <span tooltip="A percentage cutoff that removes candidates with too few votes">Threshold: {{question.threshold}}%</span>
         </label>
         <div class="col-md-8">
-          <input type="range" name="question_threshold" [value]="question.threshold"
-            class="form-control" (mouseup)="question.threshold=$event.target.value"
-            (touchend)="question.threshold=$event.target.value"
-            (input)="question.threshold=$event.target.value"
-            (value)="question.threshold" type="range"
-            min="0" max="100" step="1">
+          <input type="range" name="question_threshold" [value]="question.threshold" class="form-control" (mouseup)="question.threshold=$event.target.value"
+            (touchend)="question.threshold=$event.target.value" (input)="question.threshold=$event.target.value" (value)="question.threshold"
+            type="range" min="0" max="100" step="1">
         </div>
       </div>
       <div class="form-group row">
@@ -89,25 +83,19 @@
           <span *ngIf="question.expire_time">{{question.expire_time | moment}}</span>
         </label>
         <div class="col-md-8">
-          <input type="text"
-            class="form-control"
-            #dp="bsDatepicker"
-            bsDatepicker
-            [(bsValue)]="expireDate"
-            name="question_expire_time">
+          <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker [(bsValue)]="expireDate" name="question_expire_time">
         </div>
       </div>
       <button class="btn btn-primary" type="submit" role="button">Save</button>
     </form>
     <div *ngIf="!this.question.editing">
       <div *ngFor="let candidate of question.candidates; let i = index">
-        <app-candidate [candidate]="candidate" [anonymous]="question.anonymous"
-          [expired]="isExpired()" [questionType]="question.question_type_id">
+        <app-candidate [candidate]="candidate" [anonymous]="question.anonymous" [expired]="isExpired()" [questionType]="question.question_type_id">
         </app-candidate>
       </div>
-      <button *ngIf="canCreateCandidate() && !isExpired() && !question.readOnly"
-        class="btn btn-outline-primary" (click)="createCandidate()"
-        role="button"><i class="fa fa-fw fa-plus "></i>Add an option</button>
+      <button *ngIf="canCreateCandidate() && !isExpired() && !question.readOnly" class="btn btn-outline-primary" (click)="createCandidate()"
+        role="button">
+        <i class="fa fa-fw fa-plus "></i>Add an option</button>
     </div>
   </div>
 </div>
