--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -1,7 +1,7 @@
 <div class="mb-3">
   <div class="mb-1" *ngIf="!this.candidate.editing">
     <div class="row">
-      <div class="col-xs-12 col-md-7">
+      <div class="col-xs-12 col-lg-8 pr-0">
         <span *ngIf="candidate.title" [innerHtml]="candidate.title | markdown" class="mr-2"></span>
         <span *ngIf="!candidate.title" class="mr-2">Untitled candidate</span>
 
@@ -14,7 +14,7 @@
           <li class="list-inline-item" *ngIf="voteExists() && !expired" role="button" (click)="deleteVote()" tooltip="Clear vote">clear vote</li>
         </ul>
       </div>
-      <div class="col-xs-12 col-md-5 edits text-right">
+      <div class="col-xs-12 col-lg-4 pl-0 edits text-right">
         <span *ngIf="voteExists() && questionType == 1">Your Vote: {{vote / 10}} | </span>
         <span *ngIf="voteExists() && questionType >= 2">Your Vote: {{vote / 10}} | </span>
         <span *ngIf="candidate?.meetsThreshold && (questionType == 1 || questionType == 3)" role="button">Score:
