Adding participation percentage.

--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -64,6 +64,7 @@
                   </td>
               </tbody>
             </table>
+            <span>Participation: {{participationPct}}%</span>
           </div>
         </div>
         <form *ngIf="this.poll.editing" (ngSubmit)="updatePoll()">
